--- a/help/C/index.page
+++ b/help/C/index.page
@@ -4,16 +4,16 @@
       type="guide" style="task" id="index">
 
 	<info>
-		<desc>Help for gLogic</desc>
+		<desc>Help for GLogic</desc>
 		<title type="link" role="trail" its:translate="no"><media type="image" src="figures/glogic-trail.png"/></title>
-		<title type="link">gLogic, Logic circuit simulator</title>
-		<title type="text">gLogic, Logic circuit simulator</title>
+		<title type="link">GLogic, Logic circuit simulator</title>
+		<title type="text">GLogic, Logic circuit simulator</title>
 		<revision pkgversion="2.6" version="0.1" date="2012-10-06" status="final"/>
 		<include xmlns="http://www.w3.org/2001/XInclude" href="credit.xml"/>
 		<include xmlns="http://www.w3.org/2001/XInclude" href="legal.xml"/>
 	</info>
 
-	<title><media type="image" src="figures/glogic-logo.png" its:translate="no">gLogic logo</media> gLogic, Logic circuit simulator</title>
+	<title><media type="image" src="figures/glogic-logo.png" its:translate="no">GLogic logo</media> GLogic, Logic circuit simulator</title>
 	<section id="edit" style="2column">
 		<title>Edit circuit</title>
 	</section>
